[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Avatar/avata1c1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Avatar/avatn0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Avatar/avatr0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Avatar/avatv0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Avatar/avats0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Avatar/avatb1d1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Avatar/avati1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Avatar/avato0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Avatar/avatq0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Avatar/avatt0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Avatar/avatu0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Avatar/avatp0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Avatar/avatm1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Avatar/avatj1.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Avatar.gd" type="Script" id=15]

[sub_resource type="CapsuleShape" id=1]
radius = 0.202199
height = 0.377821

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 14 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CylinderShape" id=3]
height = 4.1687
radius = 18.0656

[node name="Avatar" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 5, 0, 0, 0, 0.0582924, 4.99966, 0, -4.99966, 0.0582924, 0, 1.95317, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
centered = false
offset = Vector2( -30.978, 0 )
billboard = 2
frames = SubResource( 2 )
animation = "shoot"
frame = 1
playing = true

[node name="Visual" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -40 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Aural" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Aural"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.883929, 0 )
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.28171, 0 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Aural" to="." method="_on_Arual_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
